framec_tests/language_specific/c/v3_outline/negative/state_missing_brace.frm
@target c

system S {
    machine:
        $A 
}

